# book_gen_project

./: .env  README.md  ai_service.py  compiler.py  config.py  db.py  excel_reader.py  exceptions.py  input.xlsx  insert_book.py  logger.py  main.py  pyproject.toml  requirements.txt  sample_input.csv  schema.sql  services.py
